--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Student-in-IUB.github.io/Dashboard-1/",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
